--- a/app/src/main/res/layout/fragment_form_baby_in_layout.xml
+++ b/app/src/main/res/layout/fragment_form_baby_in_layout.xml
@@ -1,287 +1,183 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="@dimen/primary_margin"
     android:orientation="vertical">
     <RelativeLayout
-        android:layout_marginTop="0dip"
-        style="@style/form_container">
+        android:id="@+id/ll_baby_weight_form_container"
+        style="@style/form_main_container">
 
         <TextView
             android:text="@string/weight"
-            style="@style/form_title" />
+            style="@style/form_month" />
 
-        <LinearLayout
-            android:id="@+id/ll_weight_grit"
-            style="@style/form_mode_selector">
-            <TextView
-                android:id="@+id/tv_weight_grit"
-                android:text="@string/day_tian"
-                style="@style/form_grit" />
-            <ImageView
-                android:src="@drawable/ic_triangle"
-                style="@style/trangle" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/ll_weight_form_container"
-            android:layout_below="@id/ll_weight_grit"
-            style="@style/form_main_container">
-
-            <TextView
-                android:text="9月"
-                style="@style/form_month" />
-            <ImageView
-                android:id="@+id/form_baby_weight"
-                android:src="@drawable/temp_weight_form"
-                style="@style/form" />
-
-        </LinearLayout>
+        <TextView
+            android:id="@+id/tv_baby_value_weight"
+            tools:text="65kg"
+            android:layout_toLeftOf="@+id/tv_baby_date_weight"
+            style="@style/form_value" />
+        <View
+            android:id="@+id/v_baby_divider_weight"
+            style="@style/form_divider" />
+        <TextView
+            android:id="@+id/tv_baby_date_weight"
+            tools:text="10月13日"
+            android:layout_toRightOf="@+id/v_baby_divider_weight"
+            style="@style/form_date" />
 
         <RadioGroup
-            android:layout_below="@id/ll_weight_form_container"
-            style="@style/form_grit_selector">
+            android:id="@+id/rg_baby_selector_weight"
+            style="@style/form_date_selector">
             <RadioButton
-                android:id="@+id/rb_weight_grit_0"
-                android:text="4"
-                style="@style/grit_selector" />
-            <RadioButton
-                android:id="@+id/rb_weight_grit_1"
-                android:text="5"
-                style="@style/grit_selector" />
-            <RadioButton
-                android:id="@+id/rb_weight_grit_2"
-                android:text="6"
-                style="@style/grit_selector" />
-            <RadioButton
-                android:id="@+id/rb_weight_grit_3"
-                android:text="7"
-                style="@style/grit_selector" />
-            <RadioButton
-                android:id="@+id/rb_weight_grit_4"
-                android:text="8"
-                style="@style/grit_selector" />
-            <RadioButton
-                android:id="@+id/rb_weight_grit_5"
-                android:text="9"
-                style="@style/grit_selector" />
-            <RadioButton
+                android:id="@+id/rb_baby_weight_date_week"
+                android:text="@string/week"
                 android:checked="true"
-                android:id="@+id/rb_weight_grit_6"
-                android:text="10"
-                style="@style/grit_selector" />
+                style="@style/form_date_item" />
+            <RadioButton
+                android:id="@+id/rb_baby_weight_date_month"
+                android:text="@string/month"
+                style="@style/form_date_item"/>
         </RadioGroup>
+
+        <com.uuzz.android.ui.view.LineChatView
+            android:id="@+id/lcv_baby_weight"
+            android:background="#aadea0"
+            style="@style/chat" />
+
     </RelativeLayout>
 
 <!--  头围  -->
     <RelativeLayout
-        style="@style/form_container">
+        android:id="@+id/ll_baby_head_form_container"
+        style="@style/form_main_container">
 
         <TextView
-            android:text="@string/head_size"
-            style="@style/form_title" />
+            android:text="@string/head"
+            style="@style/form_month" />
 
-        <LinearLayout
-            android:id="@+id/ll_head_grit"
-            style="@style/form_mode_selector">
-            <TextView
-                android:id="@+id/tv_head_grit"
-                android:text="@string/day_tian"
-                style="@style/form_grit" />
-            <ImageView
-                android:src="@drawable/ic_triangle"
-                style="@style/trangle" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/ll_head_form_container"
-            android:layout_below="@id/ll_head_grit"
-            style="@style/form_main_container">
-
-            <TextView
-                android:text="9月"
-                style="@style/form_month" />
-            <ImageView
-                android:id="@+id/form_baby_head"
-                android:src="@drawable/temp_head_form"
-                style="@style/form" />
-
-        </LinearLayout>
+        <TextView
+            android:id="@+id/tv_baby_value_head"
+            tools:text="65kg"
+            android:layout_toLeftOf="@+id/tv_baby_date_head"
+            style="@style/form_value" />
+        <View
+            android:id="@+id/v_baby_divider_head"
+            style="@style/form_divider" />
+        <TextView
+            android:id="@+id/tv_baby_date_head"
+            tools:text="10月13日"
+            android:layout_toRightOf="@+id/v_baby_divider_head"
+            style="@style/form_date" />
 
         <RadioGroup
-            android:layout_below="@id/ll_head_form_container"
-            style="@style/form_grit_selector">
+            android:id="@+id/rg_baby_selector_head"
+            style="@style/form_date_selector">
             <RadioButton
-                android:id="@+id/rb_head_grit_0"
-                android:text="4"
-                style="@style/grit_selector" />
-            <RadioButton
-                android:id="@+id/rb_head_grit_1"
-                android:text="5"
-                style="@style/grit_selector" />
-            <RadioButton
-                android:id="@+id/rb_head_grit_2"
-                android:text="6"
-                style="@style/grit_selector" />
-            <RadioButton
-                android:id="@+id/rb_head_grit_3"
-                android:text="7"
-                style="@style/grit_selector" />
-            <RadioButton
-                android:id="@+id/rb_head_grit_4"
-                android:text="8"
-                style="@style/grit_selector" />
-            <RadioButton
-                android:id="@+id/rb_head_grit_5"
-                android:text="9"
-                style="@style/grit_selector" />
-            <RadioButton
+                android:id="@+id/rb_baby_head_date_week"
+                android:text="@string/week"
                 android:checked="true"
-                android:id="@+id/rb_head_grit_6"
-                android:text="10"
-                style="@style/grit_selector" />
+                style="@style/form_date_item" />
+            <RadioButton
+                android:id="@+id/rb_baby_head_date_month"
+                android:text="@string/month"
+                style="@style/form_date_item"/>
         </RadioGroup>
+
+        <com.uuzz.android.ui.view.LineChatView
+            android:id="@+id/lcv_baby_head"
+            android:background="#aadea0"
+            style="@style/chat" />
+
     </RelativeLayout>
 
 <!--  胸围  -->
     <RelativeLayout
-        style="@style/form_container">
+        android:id="@+id/ll_baby_chest_form_container"
+        style="@style/form_main_container">
 
         <TextView
             android:text="@string/chest"
-            style="@style/form_title" />
+            style="@style/form_month" />
 
-        <LinearLayout
-            android:id="@+id/ll_chest_grit"
-            style="@style/form_mode_selector">
-            <TextView
-                android:id="@+id/tv_chest_grit"
-                android:text="@string/day_tian"
-                style="@style/form_grit" />
-            <ImageView
-                android:src="@drawable/ic_triangle"
-                style="@style/trangle" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/ll_chest_form_container"
-            android:layout_below="@id/ll_chest_grit"
-            style="@style/form_main_container">
-
-            <TextView
-                android:text="9月"
-                style="@style/form_month" />
-            <ImageView
-                android:id="@+id/form_baby_chest"
-                android:src="@drawable/temp_chest_form"
-                style="@style/form" />
-
-        </LinearLayout>
+        <TextView
+            android:id="@+id/tv_baby_value_chest"
+            tools:text="65kg"
+            android:layout_toLeftOf="@+id/tv_baby_date_chest"
+            style="@style/form_value" />
+        <View
+            android:id="@+id/v_baby_divider_chest"
+            style="@style/form_divider" />
+        <TextView
+            android:id="@+id/tv_baby_date_chest"
+            tools:text="10月13日"
+            android:layout_toRightOf="@+id/v_baby_divider_chest"
+            style="@style/form_date" />
 
         <RadioGroup
-            android:layout_below="@id/ll_chest_form_container"
-            style="@style/form_grit_selector">
+            android:id="@+id/rg_baby_selector_chest"
+            style="@style/form_date_selector">
             <RadioButton
-                android:id="@+id/rb_chest_grit_0"
-                android:text="4"
-                style="@style/grit_selector" />
-            <RadioButton
-                android:id="@+id/rb_chest_grit_1"
-                android:text="5"
-                style="@style/grit_selector" />
-            <RadioButton
-                android:id="@+id/rb_chest_grit_2"
-                android:text="6"
-                style="@style/grit_selector" />
-            <RadioButton
-                android:id="@+id/rb_chest_grit_3"
-                android:text="7"
-                style="@style/grit_selector" />
-            <RadioButton
-                android:id="@+id/rb_chest_grit_4"
-                android:text="8"
-                style="@style/grit_selector" />
-            <RadioButton
-                android:id="@+id/rb_chest_grit_5"
-                android:text="9"
-                style="@style/grit_selector" />
-            <RadioButton
+                android:id="@+id/rb_baby_chest_date_week"
+                android:text="@string/week"
                 android:checked="true"
-                android:id="@+id/rb_chest_grit_6"
-                android:text="10"
-                style="@style/grit_selector" />
+                style="@style/form_date_item" />
+            <RadioButton
+                android:id="@+id/rb_baby_chest_date_month"
+                android:text="@string/month"
+                style="@style/form_date_item"/>
         </RadioGroup>
+
+        <com.uuzz.android.ui.view.LineChatView
+            android:id="@+id/lcv_baby_chest"
+            android:background="#aadea0"
+            style="@style/chat" />
+
     </RelativeLayout>
 
 <!--  身高  -->
     <RelativeLayout
-        style="@style/form_container">
+        android:id="@+id/ll_baby_height_form_container"
+        style="@style/form_main_container">
 
         <TextView
             android:text="@string/height"
-            style="@style/form_title" />
+            style="@style/form_month" />
 
-        <LinearLayout
-            android:id="@+id/ll_height_grit"
-            style="@style/form_mode_selector">
-            <TextView
-                android:id="@+id/tv_height_grit"
-                android:text="@string/day_tian"
-                style="@style/form_grit" />
-            <ImageView
-                android:src="@drawable/ic_triangle"
-                style="@style/trangle" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/ll_height_form_container"
-            android:layout_below="@id/ll_height_grit"
-            style="@style/form_main_container">
-
-            <TextView
-                android:text="9月"
-                style="@style/form_month" />
-            <ImageView
-                android:id="@+id/form_baby_height"
-                android:src="@drawable/temp_height_form"
-                style="@style/form" />
-
-        </LinearLayout>
+        <TextView
+            android:id="@+id/tv_baby_value_height"
+            tools:text="65kg"
+            android:layout_toLeftOf="@+id/tv_baby_date_height"
+            style="@style/form_value" />
+        <View
+            android:id="@+id/v_baby_divider_height"
+            style="@style/form_divider" />
+        <TextView
+            android:id="@+id/tv_baby_date_height"
+            tools:text="10月13日"
+            android:layout_toRightOf="@+id/v_baby_divider_height"
+            style="@style/form_date" />
 
         <RadioGroup
-            android:layout_below="@id/ll_height_form_container"
-            style="@style/form_grit_selector">
+            android:id="@+id/rg_baby_selector_height"
+            style="@style/form_date_selector">
             <RadioButton
-                android:id="@+id/rb_height_grit_0"
-                android:text="4"
-                style="@style/grit_selector" />
-            <RadioButton
-                android:id="@+id/rb_height_grit_1"
-                android:text="5"
-                style="@style/grit_selector" />
-            <RadioButton
-                android:id="@+id/rb_height_grit_2"
-                android:text="6"
-                style="@style/grit_selector" />
-            <RadioButton
-                android:id="@+id/rb_height_grit_3"
-                android:text="7"
-                style="@style/grit_selector" />
-            <RadioButton
-                android:id="@+id/rb_height_grit_4"
-                android:text="8"
-                style="@style/grit_selector" />
-            <RadioButton
-                android:id="@+id/rb_height_grit_5"
-                android:text="9"
-                style="@style/grit_selector" />
-            <RadioButton
+                android:id="@+id/rb_baby_height_date_week"
+                android:text="@string/week"
                 android:checked="true"
-                android:id="@+id/rb_height_grit_6"
-                android:text="10"
-                style="@style/grit_selector" />
+                style="@style/form_date_item" />
+            <RadioButton
+                android:id="@+id/rb_baby_height_date_month"
+                android:text="@string/month"
+                style="@style/form_date_item"/>
         </RadioGroup>
+
+        <com.uuzz.android.ui.view.LineChatView
+            android:id="@+id/lcv_baby_height"
+            android:background="#aadea0"
+            style="@style/chat" />
+
     </RelativeLayout>
 
     <LinearLayout
