--- a/app/src/main/res/layout/fragment_form_baby_after_layout.xml
+++ b/app/src/main/res/layout/fragment_form_baby_after_layout.xml
@@ -1,82 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="@dimen/primary_margin"
     android:orientation="vertical">
 
     <RelativeLayout
-        android:layout_marginTop="0dip"
-        style="@style/form_container">
+        android:id="@+id/ll_baby_weight_form_container"
+        style="@style/form_main_container">
 
         <TextView
             android:text="@string/weight"
-            style="@style/form_title" />
+            style="@style/form_month" />
 
-        <LinearLayout
-            android:id="@+id/ll_weight_grit"
-            style="@style/form_mode_selector">
-            <TextView
-                android:id="@+id/tv_weight_grit"
-                android:text="@string/day_tian"
-                style="@style/form_grit" />
-            <ImageView
-                android:src="@drawable/ic_triangle"
-                style="@style/trangle" />
-        </LinearLayout>
+        <TextView
+            android:id="@+id/tv_baby_value_weight"
+            tools:text="65kg"
+            android:layout_toLeftOf="@+id/tv_baby_date_weight"
+            style="@style/form_value" />
+        <View
+            android:id="@+id/v_baby_divider_weight"
+            style="@style/form_divider" />
+        <TextView
+            android:id="@+id/tv_baby_date_weight"
+            tools:text="10月13日"
+            android:layout_toRightOf="@+id/v_baby_divider_weight"
+            style="@style/form_date" />
 
-        <LinearLayout
-            android:id="@+id/ll_weight_form_container"
-            android:layout_below="@id/ll_weight_grit"
-            style="@style/form_main_container">
+        <RadioGroup
+            android:id="@+id/rg_baby_selector_weight"
+            style="@style/form_date_selector">
+            <RadioButton
+                android:id="@+id/rb_baby_weight_date_week"
+                android:text="@string/week"
+                android:checked="true"
+                style="@style/form_date_item" />
+            <RadioButton
+                android:id="@+id/rb_baby_weight_date_month"
+                android:text="@string/month"
+                style="@style/form_date_item"/>
+        </RadioGroup>
 
-            <TextView
-                android:text="9月"
-                style="@style/form_month" />
-            <ImageView
-                android:id="@+id/form_baby_weight"
-                android:src="@drawable/temp_weight_form"
-                style="@style/form" />
-
-        </LinearLayout>
+        <com.uuzz.android.ui.view.LineChatView
+            android:id="@+id/lcv_baby_weight"
+            android:background="#aadea0"
+            style="@style/chat" />
 
     </RelativeLayout>
 
 
     <!--  身高  -->
     <RelativeLayout
-        style="@style/form_container">
+        android:id="@+id/ll_baby_height_form_container"
+        style="@style/form_main_container">
 
         <TextView
             android:text="@string/height"
-            style="@style/form_title" />
+            style="@style/form_month" />
 
-        <LinearLayout
-            android:id="@+id/ll_height_grit"
-            style="@style/form_mode_selector">
-            <TextView
-                android:id="@+id/tv_height_grit"
-                android:text="@string/day_tian"
-                style="@style/form_grit" />
-            <ImageView
-                android:src="@drawable/ic_triangle"
-                style="@style/trangle" />
-        </LinearLayout>
+        <TextView
+            android:id="@+id/tv_baby_value_height"
+            tools:text="65kg"
+            android:layout_toLeftOf="@+id/tv_baby_date_height"
+            style="@style/form_value" />
+        <View
+            android:id="@+id/v_baby_divider_height"
+            style="@style/form_divider" />
+        <TextView
+            android:id="@+id/tv_baby_date_height"
+            tools:text="10月13日"
+            android:layout_toRightOf="@+id/v_baby_divider_height"
+            style="@style/form_date" />
 
-        <LinearLayout
-            android:id="@+id/ll_height_form_container"
-            android:layout_below="@id/ll_height_grit"
-            style="@style/form_main_container">
+        <RadioGroup
+            android:id="@+id/rg_baby_selector_height"
+            style="@style/form_date_selector">
+            <RadioButton
+                android:id="@+id/rb_baby_height_date_week"
+                android:text="@string/week"
+                android:checked="true"
+                style="@style/form_date_item" />
+            <RadioButton
+                android:id="@+id/rb_baby_height_date_month"
+                android:text="@string/month"
+                style="@style/form_date_item"/>
+        </RadioGroup>
 
-            <TextView
-                android:text="9月"
-                style="@style/form_month" />
-            <ImageView
-                android:id="@+id/form_baby_height"
-                android:src="@drawable/temp_height_form"
-                style="@style/form" />
-
-        </LinearLayout>
+        <com.uuzz.android.ui.view.LineChatView
+            android:id="@+id/lcv_baby_height"
+            android:background="#9dbbe8"
+            style="@style/chat" />
 
     </RelativeLayout>
 
