--- a/app/src/main/res/layout/fragment_form_mother_in_layout.xml
+++ b/app/src/main/res/layout/fragment_form_mother_in_layout.xml
@@ -6,143 +6,90 @@
     android:padding="@dimen/primary_margin"
     android:orientation="vertical">
     <RelativeLayout
-        android:layout_marginTop="0dip"
-        style="@style/form_container">
+        android:id="@+id/ll_mother_weight_form_container"
+        style="@style/form_main_container">
 
         <TextView
             android:text="@string/weight"
-            style="@style/form_title" />
+            style="@style/form_month" />
 
-        <LinearLayout
-            android:id="@+id/ll_weight_grit"
-            style="@style/form_mode_selector">
-            <TextView
-                android:id="@+id/tv_weight_grit"
-                android:text="@string/day_tian"
-                style="@style/form_grit" />
-            <ImageView
-                android:src="@drawable/ic_triangle"
-                style="@style/trangle" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/ll_weight_form_container"
-            android:layout_below="@id/ll_weight_grit"
-            style="@style/form_main_container">
-
-            <TextView
-                android:text="9月"
-                style="@style/form_month" />
-            <ImageView
-                android:id="@+id/form_mother_weight"
-                android:src="@drawable/temp_weight_form"
-                style="@style/form" />
-
-        </LinearLayout>
+        <TextView
+            android:id="@+id/tv_mother_value_weight"
+            tools:text="65kg"
+            android:layout_toLeftOf="@+id/tv_mother_date_weight"
+            style="@style/form_value" />
+        <View
+            android:id="@+id/v_mother_divider_weight"
+            style="@style/form_divider" />
+        <TextView
+            android:id="@+id/tv_mother_date_weight"
+            tools:text="10月13日"
+            android:layout_toRightOf="@+id/v_mother_divider_weight"
+            style="@style/form_date" />
 
         <RadioGroup
-            android:layout_below="@id/ll_weight_form_container"
-            style="@style/form_grit_selector">
+            android:id="@+id/rg_mother_selector_weight"
+            style="@style/form_date_selector">
             <RadioButton
-                android:id="@+id/rb_weight_grit_0"
-                android:text="4"
-                style="@style/grit_selector" />
-            <RadioButton
-                android:id="@+id/rb_weight_grit_1"
-                android:text="5"
-                style="@style/grit_selector" />
-            <RadioButton
-                android:id="@+id/rb_weight_grit_2"
-                android:text="6"
-                style="@style/grit_selector" />
-            <RadioButton
-                android:id="@+id/rb_weight_grit_3"
-                android:text="7"
-                style="@style/grit_selector" />
-            <RadioButton
-                android:id="@+id/rb_weight_grit_4"
-                android:text="8"
-                style="@style/grit_selector" />
-            <RadioButton
-                android:id="@+id/rb_weight_grit_5"
-                android:text="9"
-                style="@style/grit_selector" />
-            <RadioButton
+                android:id="@+id/rb_mother_weight_date_week"
+                android:text="@string/week"
                 android:checked="true"
-                android:id="@+id/rb_weight_grit_6"
-                android:text="10"
-                style="@style/grit_selector" />
+                style="@style/form_date_item" />
+            <RadioButton
+                android:id="@+id/rb_mother_weight_date_month"
+                android:text="@string/month"
+                style="@style/form_date_item"/>
         </RadioGroup>
+
+        <com.uuzz.android.ui.view.LineChatView
+            android:id="@+id/lcv_mother_weight"
+            android:background="#aadea0"
+            style="@style/chat" />
+
     </RelativeLayout>
 
 <!--  体温  -->
     <RelativeLayout
-        style="@style/form_container">
+        android:id="@+id/ll_mother_temperature_form_container"
+        style="@style/form_main_container">
 
         <TextView
             android:text="@string/temperature"
-            style="@style/form_title" />
+            style="@style/form_month" />
 
-        <LinearLayout
-            android:id="@+id/ll_temperature_grit"
-            style="@style/form_mode_selector">
-            <TextView
-                android:id="@+id/tv_temperature_grit"
-                android:text="@string/day_tian"
-                style="@style/form_grit" />
-            <ImageView
-                android:src="@drawable/ic_triangle"
-                style="@style/trangle" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/ll_temperature_form_container"
-            android:layout_below="@id/ll_temperature_grit"
-            style="@style/form_main_container">
-
-            <TextView
-                android:text="9月"
-                style="@style/form_month" />
-            <ImageView
-                android:id="@+id/form_mother_temperature"
-                android:src="@drawable/temp_temperature_form"
-                style="@style/form" />
-
-        </LinearLayout>
+        <TextView
+            android:id="@+id/tv_mother_value_temperature"
+            tools:text="65kg"
+            android:layout_toLeftOf="@+id/tv_mother_date_temperature"
+            style="@style/form_value" />
+        <View
+            android:id="@+id/v_mother_divider_temperature"
+            style="@style/form_divider" />
+        <TextView
+            android:id="@+id/tv_mother_date_temperature"
+            tools:text="10月13日"
+            android:layout_toRightOf="@+id/v_mother_divider_temperature"
+            style="@style/form_date" />
 
         <RadioGroup
-            android:layout_below="@id/ll_temperature_form_container"
-            style="@style/form_grit_selector">
+            android:id="@+id/rg_mother_selector_temperature"
+            style="@style/form_date_selector">
             <RadioButton
-                android:id="@+id/rb_temperature_grit_0"
-                android:text="4"
-                style="@style/grit_selector" />
-            <RadioButton
-                android:id="@+id/rb_temperature_grit_1"
-                android:text="5"
-                style="@style/grit_selector" />
-            <RadioButton
-                android:id="@+id/rb_temperature_grit_2"
-                android:text="6"
-                style="@style/grit_selector" />
-            <RadioButton
-                android:id="@+id/rb_temperature_grit_3"
-                android:text="7"
-                style="@style/grit_selector" />
-            <RadioButton
-                android:id="@+id/rb_temperature_grit_4"
-                android:text="8"
-                style="@style/grit_selector" />
-            <RadioButton
-                android:id="@+id/rb_temperature_grit_5"
-                android:text="9"
-                style="@style/grit_selector" />
-            <RadioButton
+                android:id="@+id/rb_mother_temperature_date_week"
+                android:text="@string/week"
                 android:checked="true"
-                android:id="@+id/rb_temperature_grit_6"
-                android:text="10"
-                style="@style/grit_selector" />
+                style="@style/form_date_item" />
+            <RadioButton
+                android:id="@+id/rb_mother_temperature_date_month"
+                android:text="@string/month"
+                style="@style/form_date_item"/>
         </RadioGroup>
+
+        <com.uuzz.android.ui.view.LineChatView
+            android:id="@+id/lcv_mother_temperature"
+            android:background="#aadea0"
+            style="@style/chat" />
+
     </RelativeLayout>
 
     <LinearLayout
