--- a/ck-lib/src/main/res/values/attrs.xml
+++ b/ck-lib/src/main/res/values/attrs.xml
@@ -58,9 +58,9 @@
     <declare-styleable name="LineChatView">
         <attr name="line_color" format="color|reference"/>                      <!-- 折线颜色 -->
         <attr name="unselected_point_color" format="color|reference"/>              <!-- 未选中端点颜色 -->
-        <attr name="line_width" format="integer|reference"/>                    <!-- 线宽 -->
-        <attr name="unselected_point_radius" format="integer|reference"/>       <!-- 未选中端点半径 -->
-        <attr name="selected_point_radius" format="integer|reference"/>         <!-- 选中端点半径 -->
+        <attr name="line_width" format="dimension|reference"/>                    <!-- 线宽 -->
+        <attr name="unselected_point_radius" format="dimension|reference"/>       <!-- 未选中端点半径 -->
+        <attr name="selected_point_radius" format="dimension|reference"/>         <!-- 选中端点半径 -->
         <attr name="point_count" format="integer|reference"/>                   <!-- 每页端点数 -->
         <attr name="bessel" format="boolean|reference"/>                        <!-- 是否使用贝塞尔曲线 -->
     </declare-styleable>
