完善个人信息后添加激活操作 添加文章收藏（传入数据未完善）

--- a/app/src/main/res/layout/fragment_host.xml
+++ b/app/src/main/res/layout/fragment_host.xml
@@ -66,14 +66,12 @@
                 android:layout_below="@id/ci_main_picture"
                 android:layout_width="match_parent"
                 android:layout_height="85dip"
-                android:scaleType="fitXY"
-                android:src="@drawable/bg_page_one_arc_up"/>
+                android:scaleType="fitXY"/>
             <ImageView
                 android:layout_below="@id/im_arc_up"
                 android:layout_width="match_parent"
                 android:layout_height="127dip"
-                android:scaleType="fitXY"
-                android:src="@drawable/bg_page_one_arc_down"/>
+                android:scaleType="fitXY"/>
 
             <TextView
                 android:id="@+id/tv_advice"
