“我的”“成长加油站”页面金钱数额的以及首页的格式化 疫苗页面的完成（为完全实现）

--- a/app/src/main/res/layout/activity_growup_gas_station.xml
+++ b/app/src/main/res/layout/activity_growup_gas_station.xml
@@ -18,6 +18,7 @@
             android:textSize="21dip" />
 
         <TextView
+            android:id="@+id/tv_show_money"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginLeft="4dip"
