修复6.0以下的权限流程（以前有次改错了，导致重复任务） 调试健康信息录入（后台不接受小数传输，暂时屏蔽小数） 修改了数据修改的getdatamodel方法（以前拼错了） 修复折线图点击崩溃的bug 修复健康栏目一些崩溃的问题 修复首页提示语数字计算偏移问题

--- a/app/src/main/res/layout/fragment_health_data_after_baby.xml
+++ b/app/src/main/res/layout/fragment_health_data_after_baby.xml
@@ -30,7 +30,7 @@
         <View style="@style/health_data_item_divider" />
         <EditText
             android:id="@+id/et_baby_weight"
-            android:hint="请输入体重cm"
+            android:hint="请输入体重kg"
             style="@style/health_data_item_editor" />
     </RelativeLayout>
 
