--- a/app/src/main/res/layout/activity_growup_gas_station.xml
+++ b/app/src/main/res/layout/activity_growup_gas_station.xml
@@ -129,7 +129,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:layout_marginBottom="13dip"
-                    android:text="素加婴儿配方奶粉2段" />
+                    android:text="素加宝宝配方奶粉2段" />
             </RelativeLayout>
         </LinearLayout>
     </LinearLayout>
