--- a/app/src/main/res/layout/activity_health_data_before_frame.xml
+++ b/app/src/main/res/layout/activity_health_data_before_frame.xml
@@ -66,7 +66,7 @@
                             android:checked="true"
                             android:textColor="@color/white"
                             android:background="@drawable/health_before_selector_mother"
-                            android:text="母亲"/>
+                            android:text="@string/mother"/>
                     </RadioGroup>
                     <FrameLayout
                         android:id="@+id/fl_form_container"
