--- a/app/src/main/res/layout/activity_health_data_in_frame.xml
+++ b/app/src/main/res/layout/activity_health_data_in_frame.xml
@@ -66,7 +66,7 @@
                             android:checked="true"
                             android:textColor="@drawable/health_selector_text_color"
                             android:background="@drawable/health_selector_mother_touchable"
-                            android:text="母亲"/>
+                            android:text="@string/mother"/>
                         <RadioButton
                             android:id="@+id/rb_baby3"
                             android:layout_width="0dip"
