--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,13 @@
 <resources>
 
     <dimen name="login_logo">130dip</dimen>
+    <dimen name="app_update_circle_layout">250dp</dimen>
+    <dimen name="answer_circle">220dp</dimen>
+    <dimen name="blank_space_2">8dp</dimen>
+    <dimen name="blank_space_3">16dp</dimen>
+    <dimen name="blank_space_4">24dp</dimen>
+    <dimen name="blank_space_5">48dp</dimen>
+    <dimen name="blank_space_6">96dp</dimen>
+    <dimen name="tx_size_7">20sp</dimen>
+    <dimen name="blank_space_7">250dp</dimen>
 </resources>
