微调部分界面

--- a/app/src/main/res/layout/fragment_health_service_after_layout.xml
+++ b/app/src/main/res/layout/fragment_health_service_after_layout.xml
@@ -46,7 +46,7 @@
                 android:layout_below="@+id/tv_health_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/health_analysis"
+                android:text="@string/grow_up_info"
                 android:textSize="@dimen/primary_text_size"
                 android:textColor="@color/colorAccent"/>
 
