--- a/app/src/main/res/layout/activity_knowledge.xml
+++ b/app/src/main/res/layout/activity_knowledge.xml
@@ -154,7 +154,7 @@
                         android:layout_width="15dip"
                         android:layout_height="15dip"
                         android:layout_gravity="center_vertical"
-                        android:src="@drawable/dark_star" />
+                        android:src="@drawable/light_star" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -179,7 +179,7 @@
                         android:layout_width="15dip"
                         android:layout_height="15dip"
                         android:layout_gravity="center_vertical"
-                        android:src="@drawable/dark_star" />
+                        android:src="@drawable/light_star" />
 
                     <TextView
                         android:layout_width="wrap_content"
